--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "longestfence",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "5.3.0"
+  },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC"
