--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "node": "5.3.0"
+    "node": "5.3.0",
+    "npm": "3.3.12"
   },
   "main": "index.js",
   "scripts": {
