--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "bundle": "browserify staticAssets/scripts/script.js -r -o staticAssets/scripts/bundle.js",
+    "watch": "watchify staticAssets/scripts/script.js -r -o staticAssets/scripts/bundle.js"
   },
   "author": "VZ",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "d3": "^3.5.16",
+    "topojson": "^1.6.24"
+  }
 }
