--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "bundle": "browserify staticAssets/scripts/controller.js -r -o staticAssets/scripts/bundle.js",
+    "bundle": "browserify staticAssets/scripts/controller.js -r -o --standalone controller > staticAssets/scripts/bundle.js",
     "watch": "watchify staticAssets/scripts/controller.js -r -o staticAssets/scripts/bundle.js"
   },
   "author": "VZ",
